--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -81,10 +81,19 @@ printf("%d %d\n",a,b);
 输出1 2
 ```
 ## 数据类型  
-int为整数：整数计算只能是整数10/3=3舍余  
+int为整数：整数计算只能是整数10/3=3舍余，10%3=1  
+%d是以十进制输出输入，%x是以十六进制输入输出  
+1. %c：单个字符
+2. %d：十进制整数
+3. %f ：十进制浮点数
+4. %o：八进制数
+5. %s ：字符串
+6. %u：无符号十进制数
+7. %%：输出百分号%
 当浮点数和整数一起运算，C语言会自动将整数转化为浮点数然后进行浮点数运算  
 double为双精度浮点数, scanf("%lf",...)       print ("%f",...)  
 float为单精度浮点数，scanf里为%f  
+
 ## 运算符优先级  
 赋值运算是最低的优先级  
 ## 交换变量  
