--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -135,14 +135,101 @@ a=12
 |a--|给a减1|a原来的值|
 |--a|给a减1|a-1以后的值|
 
+## 练习  
+![厘米转化英尺英寸](D:\Github客户端\My Github\Vacation\程序设计\图片\厘米转化英尺英寸.png)
+
+```c
+//厘米转化为英尺英寸
+#include <stdio.h>
+
+int main()
+{
+	int cm = 0;
+	scanf("%d",&cm);
+	int foot = cm / 30.48;
+	int inch = ((cm / 30.48) - foot) * 12;
+	//cm / 100.0 = (foot + inch / 12) * 0.3048
+	printf("%d %d\n",foot,inch);
+	return 0;
+}
+```
+![然后是几点](D:\Github客户端\My Github\Vacation\程序设计\图片\然后是几点.png)
+```c
+//然后是几点
+#include <stdio.h>
+
+int main()
+{
+	int time = 0;
+	int time1 = 0;
+	scanf("%d %d",&time,&time1);
+	int hour = time / 100;
+	int minut = (time - time / 100 * 100) + time1;
+	int T = hour * 60 + minut;
+	int answer1 = T / 60 * 100;
+	int answer2 = answer1 + T - T / 60 * 60;
+	printf("%d\n",answer2);
+	return 0;
+}
+```
+![逆序三位数](D:\Github客户端\My Github\Vacation\程序设计\图片\逆序三位数.png)
+```c
+//逆序的三位数
+#include <stdio.h>
+
+int main()
+{
+	int a = 0;
+	scanf("%d",&a);
+	int a1 = a / 100;
+	int a2 = (a % 100) / 10;
+	int a3 = a % 10;
+	printf("%d\n",a3 * 100 + a2 * 10 + a1);
+	return 0;
+}
+```
+![BCD解密](D:\Github客户端\My Github\Vacation\程序设计\图片\BCD解密.png)
 
 
+# 判断  
+## 如果  
+if（条件成立）{
+。。。
+}
+## 条件  
+|运算符|意义|
+|:-:|:-:|
+|==|相等|
+|!=|不等于|
+|>|大于|
+|>=|大于或等于|
+|<|小于|
+|<=|小于或等于|
+## 关系运算的结果  
+`printf("%d\n",5==3);结果为0`
+`printf("%d\n",5>3)结果为1;`
+`printf("%d\n",5<=3)结果为0;`
+## 优先级  
+所有关系运算符的优先级比算术运算符低，但是比赋值运算符的高  
+判断是否相等的==和！=的有限集比其他的低，而连续的关系运算是从左到右进行的  
+5>3==6>4      ->    1==1  ->   1
+6>5>4     ->    1>4   ->   0
+## 注释  
+单行注释//
+段落注释/*。。。*/
+## 否则的话  
+```c
+if(){
 
+}else{
 
-
-
-
-
-
-
-
+}
+```
+大括号里只有一句话的可以省略大括号，考缩进来判断  
+```c
+if()
+	printf();
+else
+	print();
+```
+# 分支  
