--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -233,3 +233,60 @@ else
 	print();
 ```
 # 分支  
+![成绩转换](D:\Github客户端\My Github\Vacation\程序设计\图片\成绩转换.png)
+```c
+//方法一  
+#include <stdio.h>
+
+int main()
+{
+	int score;
+	scanf("%d",&score);
+	if(score>=90){
+		printf("A\n");
+	}
+	else if(score>=80){
+		printf("B\n");
+	}
+	else if (score>=70){
+		printf("C\n");
+	}
+	else if (score>=60){
+		printf("D\n");
+	}
+	else
+		printf("E\n");
+	return 0;
+}
+```
+```c
+//方法二  
+#include <stdio.h>
+
+int main()
+{
+	int score;
+	scanf("%d",&score);
+	int t = score / 10;
+	switch (t)
+	{
+	case 10:
+	case 9:
+		printf("	A\n");
+		break;
+	case 8:
+		printf("B\n");
+		break;
+	case 7:
+		printf("C\n");
+		break;
+	case 6:
+		printf("D\n");
+		break;
+	default:
+		printf("E\n");
+		break;
+	}
+	return 0;
+}
+```
