--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -290,3 +290,39 @@ int main()
 	return 0;
 }
 ```
+# 循环  
+```c
+do
+{...
+}
+while(...);
+```
+## 随机数  
+
+```c
+//猜数游戏  
+#include <stdio.h>
+#include <stdlib.h>
+#include <time.h>
+
+int main()
+{
+	srand(time(0));
+	int number = rand()%100+1;
+	int count = 0;
+	int a = 0;
+	printf("我已经想好一个数了\n");
+	do{
+		printf("请猜这个1到100之间的数：\n");
+		scanf("%d",&a);
+		count ++;
+		if (a > number){
+		printf("你的数猜大了\n");
+		}else if(a < number){
+		printf("你的数猜小了\n");
+		}
+	}while (a != number);
+	printf("太好了，你用了%d次就猜对了答案。\n",count);
+return 0;
+}
+```
