--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -326,3 +326,100 @@ int main()
 return 0;
 }
 ```
+```c
+//倒序整数  
+#include <stdio.h>
+
+int main()
+{
+	int x ;
+	scanf("%d",&x);
+
+	int digit;
+	int ret = 0;
+
+	while (x > 0){
+	digit = x%10;
+	x = x/10;
+	ret = ret * 10 + digit;}
+
+	printf("%d\n",ret);
+return 0;
+}
+```
+```c
+//判断一个数是不是素数
+#include <stdio.h>
+
+int main()
+{
+	int i;
+	int x;
+	int isprime=0;
+	scanf("%d",&x);
+	for (i=2;i<x;i++){
+		if (x%i==0){
+			isprime = 1;
+			printf("%d不是素数\n",x);
+			break;
+		}
+	}
+	if (isprime != 1){
+		printf("%d是素数\n",x);
+	}
+	return 0;
+}
+```
+```c
+//输出0到100之间的素数
+#include <stdio.h>
+
+int main()
+{	
+	int x;
+	int i;
+	int isprime;
+	for (x = 1; x < 101; x++){
+		isprime=1;
+		for (i=2;i<x;i++){
+			if (x%i==0){
+				isprime = 0;
+				break;
+			}
+		}
+		if (isprime != 0){
+			printf("%d ",x);
+		}
+	}
+	return 0;
+}
+```
+```c
+//输出前五十个素数
+#include <stdio.h>
+
+int main()
+{	
+int x;
+	int i;
+	int isprime;
+	int cnt = 0;
+	for (x = 1; cnt <=50; x++){
+		isprime=1;
+		for (i=2;i<x;i++){
+			if (x%i==0){
+				isprime = 0;
+				break;
+			}
+		}
+		if (isprime != 0){
+			printf("%d\t ",x);
+			cnt++;
+			if (cnt%5==0){
+				printf("\n");
+			}
+		}
+	}
+	return 0;
+}
+```
