--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -423,3 +423,56 @@ int x;
 	return 0;
 }
 ```
+```c
+//分割整数
+#include <stdio.h>
+
+int main()
+{	
+	int x;
+	int t;
+	int i;
+	int m = 1;
+	scanf("%d",&x);
+	t = x;
+	while (t>9){
+		t /= 10;
+		m = m * 10;
+	}
+	//printf("%d",m);
+	do{
+		i = x / m;
+		printf("%d",i);
+		if (m>9){
+			printf(" ");
+		}
+		x %= m;
+		m /= 10;
+	} while (m>0);
+	printf("\n");
+	return 0;
+}
+```
+```c
+//用辗转相除法求最大公约数
+#include <stdio.h>
+
+int main()
+{
+	int a;
+	int b;
+	int t;
+	int a1;
+	int b1;
+	scanf("%d %d",&a,&b);
+	a1 = a;
+	b1 = b;
+	while (b1 != 0) {
+		t = a1 % b1;
+		a1 = b1;
+		b1 = t;
+	}
+	printf("%d和%d的最大公约数为%d\n",a,b,a1);
+	return 0;
+}
+```
