--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -476,3 +476,51 @@ int main()
 	return 0;
 }
 ```
+![求符合给定条件的整数集](D:\Github客户端\My Github\Vacation\程序设计\图片\求符合给定条件的整数集.png)
+```c
+//求符合给定条件的整数集
+#include <stdio.h>
+
+int main()
+{
+	int a;
+	int i,j,k;
+	int cnt=0;
+	scanf("%d",&a);
+	i = a;
+	while (i<=a+3)
+	{
+		j=a;
+		while (j<=a+3)
+		{
+			k = a;
+			while (k<=a+3)
+			{
+				if (i!=j)
+				{
+					if (j!=k)
+					{
+						if (k!=i)//到此为止，是把这三个数找了出来，让他们不重复
+						{
+							printf("%d%d%d",i,j,k);
+							cnt++;
+							if (cnt%6==0)
+							{
+								printf("\n");
+							}else
+							{
+								printf(" ");
+							}
+						}
+					}
+				}
+				k++;
+			}
+			j++;
+		}
+		i++;
+	}
+
+	return 0;
+}
+```
