--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -494,13 +494,13 @@ int main()
 		while (j<=a+3)
 		{
 			k = a;
-			while (k<=a+3)
+			while (k<=a+3)//三重循环遍历三位数的三个数
 			{
 				if (i!=j)
 				{
 					if (j!=k)
 					{
-						if (k!=i)//到此为止，是把这三个数找了出来，让他们不重复
+						if (k!=i)//让他们不重复
 						{
 							printf("%d%d%d",i,j,k);
 							cnt++;
@@ -509,7 +509,7 @@ int main()
 								printf("\n");
 							}else
 							{
-								printf(" ");
+								printf(" ");//格式要求
 							}
 						}
 					}
@@ -523,4 +523,51 @@ int main()
 
 	return 0;
 }
+//他不是把所有数都找出来再排序，而是找的时候就是从小到大，从各位开始加一直到等于a+3,然后十位然后百位
+```
+
+![水仙花数](D:\Github客户端\My Github\Vacation\程序设计\图片\水仙花数.png)
+```c
+//水仙花数，输入N输出所有N位水仙花数
+#include <stdio.h>
+
+int main()
+{
+	int n;
+	int i = 1,i2;
+	int cnt = 1;
+	int x,x2;
+	int sum;
+	int d;
+	int dd;
+	scanf("%d",&n);
+	//给出n确定从哪里开始遍历
+	for(cnt = 1;cnt < n;cnt++){
+		i *= 10;
+	}
+	x = i ;
+	//遍历所有n位数
+	while (x<i*10){
+		x2=x;
+		sum=0;
+		do{
+			d=x2%10;
+			dd=1;
+			i2=0;
+			//每一位数n次方
+			while (i2<n){
+				dd*=d;
+				i2 += 1;
+			}
+			sum+=dd;
+			x2=x2/10;
+		} while (x2>0);
+		if (sum == x){
+			printf("%d\n",x);
+		}
+		x+=1;
+	}
+	return 0;
+}
+这个题我做了快3小时，恶心，一遍一遍调试，知道自己还差得很多，但好在，做出来了，当结果运行正确的瞬间，真的，真的，很开心，真的，崩溃中的快乐吧
 ```
