--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -571,3 +571,65 @@ int main()
 }
 这个题我做了快3小时，恶心，一遍一遍调试，知道自己还差得很多，但好在，做出来了，当结果运行正确的瞬间，真的，真的，很开心，真的，崩溃中的快乐吧
 ```
+![统计素数并求和](D:\Github客户端\My Github\Vacation\程序设计\图片\统计素数并求和.png)
+```c
+//统计素数并求和while循环
+#include <stdio.h>
+
+int main()
+{
+	int m,n;
+	int i;
+	int j,k;
+	int cnt=0,sum=0;
+	scanf("%d %d",&m,&n);
+	i=m;
+	while (i<=n){
+		j=2;
+		do{
+			k=i%j;
+			if (k==0){
+				break;
+			}
+			j++;
+			if (j==i){
+				cnt++;
+				sum+=i;
+				//测试用printf("%d %d %d\n",cnt,sum,i);
+			}
+		} while (j<i);
+		i++;
+	}
+	printf("%d %d",cnt,sum);
+	return 0;
+}
+```
+```c
+//统计素数并求和for循环
+#include <stdio.h>
+
+int main()
+{
+	int m,n;
+	int i;
+	int j,k;
+	int cnt=0,sum=0;
+	scanf("%d %d",&m,&n);
+	i=m;
+	for (int i = m; i <= n; i++){
+		for (int j = 2; j < i; j++){
+			k=i%j;
+			if (k==0){
+				break;
+			}
+			if (j==i-1){
+				cnt++;
+				sum+=i;
+				//测试用printf("%d %d %d\n",cnt,sum,i);
+			}
+		}
+	}
+    printf("%d %d",cnt,sum);
+	return 0;
+}
+```
