--- a/Linux/第六讲：软件包管理.md
+++ b/Linux/第六讲：软件包管理.md
@@ -74,6 +74,29 @@ rpm -qR 包全名
 选项：  
 -R 查询软件包的依赖性(requires)  
 -p 查询未安装报的信息(package)  
+## RPM包校验和文件提取  
+### RPM包校验  
+rpm -V 已安装的包名  
+选项：  
+-V 校验指定的RPM包中的文件(verify),就是看看包是否被修改过  
+校验结果，如果没有改变，没有任何提示  
+如果改变了，会有如下显示  
+![校验结果显示](D:\Github客户端\My Github\Vacation\Linux\图片\校验结果显示.png)  
+修改标志8个：  
+![校验结果修改标志](D:\Github客户端\My Github\Vacation\Linux\图片\校验结果修改标志.png)  
+那个c是文件类型  
+![文件类型](D:\Github客户端\My Github\Vacation\Linux\图片\文件类型.png)  
+### RPM包中文件提取  
+rpm2cpio 包全名 | \(\没有什么作用，就是说一个命令没有打完，换行) cpio -idv . 文件绝对路径  
+rpm2cpio：将rpm包转换为cpio格式，2是to,因为two和to发音一样，所以在Linux中很多to都写成2，这也太懒了吧，，，
+cpio:是一个标准工具，它用于创建软件档案文件和从档案文件中提取（这里是后者）  
+如果单独使用cpio:  
+cpio 选项 < 文件或设备  
+	选项：-i copy-in模式，还原即从文件中提取数据  
+				-d 还原时自动新建目录
+				-v 显示还原过程
+文件绝对路径前的那个点表示拷贝到当前目录  
+这个文件提取主要是修补误删的系统文件的  
 # 三、RPM包管理-yum在线管理  
 # 四、源码包管理  
 # 五、脚本安装包与软件包选择  
