--- a/程序设计/假期笔记.md
+++ b/程序设计/假期笔记.md
@@ -633,3 +633,26 @@ int main()
 	return 0;
 }
 ```
+![求数列前N项和](D:\Github客户端\My Github\Vacation\程序设计\图片\求数列前N项和.png)
+```c
+//求序列前N项和
+#include <stdio.h>
+
+int main()
+{
+	double a = 2,b = 1,c;//a=3,b=2是整数，a/b就是1，如果是double就是1.5
+	int cnt = 1;
+	int n;
+	double result=0;
+	scanf("%d",&n);
+	for (cnt = 1; cnt <= n; cnt++)
+	{
+		result += a/b ;
+		c = a;
+		a += b;
+		b = c;
+	}
+	printf("%.2f",result);//"%。2f"是保留两位小数
+	return 0;
+}
+```
